# server/src/api/backoffice/animal/animals.routes.ts
@@ -6,6 +6,7 @@ import { createAnimal } from './controllers/create';
 import { createActionHistory } from './controllers/createActionHistory';
 import { dashBoardAnimalActionHistory } from './controllers/dashBoardAnimalActionHistory';
 import { animalsList } from './controllers/list';
+import { animalDetails } from './controllers/listAnimalDetails';
 
 // ROUTES
 export const animalRouter = Router();
@@ -17,3 +18,4 @@ animalRouter.post('/create/action', createActionHistory);
 animalRouter.get('/dashboard', dashBoardAnimalActionHistory);
 
 animalRouter.get('/list', animalsList);
+animalRouter.get('/details/:animalId', animalDetails);
